Overflow / floating issues.

--- a/style.scss
+++ b/style.scss
@@ -98,6 +98,7 @@ textarea, input { outline: none; }
 .site article {
 	max-width: 960px;
 	margin: 0 auto;
+	overflow: auto;
 }
 
 // Header & Navigation
